--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 
 .connect-ledger {
-    height: 100%;
+    height: 90vh;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
