--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,13 @@
 @font-face {
     font-family: 'PT Root UI';
     font-weight: normal;
-    src: url('./fonts/PT-Root-UI-Regular.ttf');
+    src: url('/fonts/PT-Root-UI-Regular.ttf');
 }
 
 @font-face {
     font-family: 'PT Root UI';
     font-weight: bold;
-    src: url('./fonts/PT-Root-UI-Bold.ttf');
+    src: url('/fonts/PT-Root-UI-Bold.ttf');
 }
 
 body {
