--- a/src/style.css
+++ b/src/style.css
@@ -304,6 +304,7 @@ body {
 }
 
 .sparx__pane {
+    box-sizing: border-box;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -370,7 +371,7 @@ body {
 }
 
 .onboarding-sparx__step {
-    position: relative;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -383,30 +384,8 @@ body {
     box-shadow: 0 0 45px 0 rgba(133, 133, 133, .1);
 }
 
-.onboarding-sparx__step::before {
-    position: absolute;
-    top: 24px;
-    left: 24px;
-    counter-increment: step;
-    content: counter(step);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 48px;
-    height: 48px;
-    background-color: #222;
-    border-radius: 50%;
-
-    color: #fff;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 1.2;
-    letter-spacing: -0.64px;
-}
-
 .onboarding-sparx__step-img {
-    max-width: 100%;
+    width: 100%;
 }
 
 .onboarding-sparx__step-title {
@@ -417,7 +396,7 @@ body {
     font-weight: 700;
     line-height: 1.2;
     letter-spacing: -1.44px;
-    margin: 16px 0 0;
+    margin: 0;
 }
 
 .onboarding-sparx__step-text {
@@ -428,7 +407,7 @@ body {
     font-weight: 500;
     line-height: 150%;
     letter-spacing: -0.64px;
-    margin-top: 8px;
+    margin: 8px 0 0;
     max-width: 302px;
 }
 
