--- a/src/style.css
+++ b/src/style.css
@@ -227,47 +227,46 @@ body {
     cursor: pointer;
     font-family: inherit;
 
-    font-size: 16px;
+    font-size: 14px;
     font-style: normal;
-    font-weight: 600;
-    line-height: 1.2;
-    letter-spacing: -0.64px;
+    font-weight: 500;
+    line-height: 1.3;
 
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 8px;
-    height: 56px;
+    height: 48px;
     min-width: 176px;
     padding: 0 24px;
     border-radius: 100px;
 }
 
 .sparx__btn--primary {
-    background-color: #222;
+    background-color: #6347F5;
     color: #fff;
     border-radius: 100px;
 }
 .sparx__btn--primary:hover {
-    background-color: #52b6d3;
+    background-color: #6347F5;
     color: #fff;
 }
 .sparx__btn--primary:active {
-    color: #b3b3b3;
+    color: #7D81A7;
 }
 
 .sparx__btn--secondary {
-    background-color: #fff;
-    color: #222;
+    background-color: #444872;
+    color: #fff;
     border-radius: 100px;
     box-shadow: 0 0 45px 0 rgba(133, 133, 133, 0.1);
 }
 .sparx__btn--secondary:hover {
-    background-color: #52b6d3;
+    background-color: #6347F5;
     color: #fff;
 }
 .sparx__btn--secondary:active {
-    color: #b3b3b3;
+    color: #7D81A7;
 }
 
 .sparx {
@@ -277,12 +276,12 @@ body {
     align-items: center;
     gap: 24px;
     min-height: 100vh;
-    background-color: #f7f7f7;
+    background-color: #10152b;
     padding: 0 16px;
 }
 
 .sparx__title {
-    color: #222;
+    color: #fff;
     text-align: center;
     font-size: 32px;
     font-style: normal;
@@ -293,7 +292,7 @@ body {
 }
 
 .sparx__comment {
-    color: #222;
+    color: #fff;
     text-align: center;
     font-size: 16px;
     font-style: normal;
@@ -349,11 +348,11 @@ body {
     align-items: center;
     gap: 24px;
     min-height: 100vh;
-    background-color: #f7f7f7;
+    background-color: #10152b;
 }
 
 .onboarding-sparx__title {
-    color: #222;
+    color: #fff;
     text-align: center;
     font-size: 32px;
     font-style: normal;
